package paxos.proto;


enum EntryType {
    UNKNOWN = 0;

    CONFIGURATION = 1;

    DATA = 2;

    NOOP = 3;
};


message Entry {

    required EntryType type = 1;

    required uint64 index = 2;

    required uint64 proposed_num = 3;

    optional uint64 promised_num = 4;

    optional uint64 accepted_num = 5;

    optional bytes accepted_value = 6;
};


message HardState {
    required uint64 index = 1;
    required uint64 proposed_num = 2;
    optional uint64 promised_num = 3;
    optional uint64 accepted_num = 5;
    optional bytes accepted_value = 6;
};

